--- a/drawing_app/index.html
+++ b/drawing_app/index.html
@@ -13,7 +13,9 @@
   </style>
   <script src="../p5.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="drawing_app_sketch.js"></script>
+  <script src="./drawing_app_sketch.js"></script>
+  <script src="./draw_line.js"></script>
+
 </head>
 
 <body>
