--- a/drawing_app/index.html
+++ b/drawing_app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
+  <title>Colour My Code</title>
   <style>
     body {
       padding: 0;
@@ -12,10 +12,8 @@
     }
   </style>
   <script src="../p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="./drawing_app_sketch.js"></script>
   <script src="./draw_line.js"></script>
-
+  <script src="./drawing_app_sketch.js"></script>
 </head>
 
 <body>
