--- a/drawing_app/index.html
+++ b/drawing_app/index.html
@@ -14,6 +14,8 @@
   <script src="../p5.js"></script>
   <script src="./draw_line.js"></script>
   <script src="./drawing_app_sketch.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
